--- a/index.html
+++ b/index.html
@@ -201,6 +201,22 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+		    
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3><b>Credit Card Fraud Detection using R</b></h3>
+                        <p>
+                            In this project we create a end to end project to detect credit card fraud detection. we use some machine Learning Algorithms to detect it like XG BOOST , Descision Tree and Classification.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
                 <h3> Also Working on Some Projects</h3>
             </div>
         </div>
